# eap-reference-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  TOOLS.md  VERSION.md  cleanup.sh  config.yaml  pyproject.toml
PRD/: reference_agent_PRD_v1.en_with_guardrails.md  reference_agent_PRD_v2.zh.final.md
Reference/: answerGen.txt  openapi.json  reference_agent_PRD_v1.md
Reference/history/: reference_agent_PRD_v1.1_with_guardrails.md  reference_agent_PRD_v1_with_guardrails.md  reference_agent_PRD_v2.en.md  reference_agent_PRD_v2.zh.md
deploy/: reference-agent.service
doc/: API_MCP.md  RATIONALE_CODES.md  config.example.yaml  env.example  openapi.json  tools_md_example_v1.en.md  tools_md_example_v1.zh_tw.md
profiles/: default.yaml
scripts/: profile_tools.py  restart.sh  start.sh  stop.sh
src/reference_agent/: __init__.py  app.py  bindings.py  composer.py  config.py  evaluator.py  evidence.py  executor.py  main.py  models.py  planning.py  profiling.py  router.py  secrets.py  service.py  storage.py  strategies.py  synthesis.py  templates.py  tool_routing.py  tools_fingerprint.py  v2_executor.py  v2_planner.py
src/reference_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: admin.css
templates/admin/: base.html  overview.html
tests/: conftest.py  test_admin_process_control.py  test_admin_ui.py  test_api.py
tools/: TOOLS.md  TOOLS.md.bak
tools/profiling.old/: .tools_md.hash  demo.graph-01100426.yaml  demo.graph-01100606.yaml  demo.graph.mitre1-01100928.yaml  demo.graph.mitre1-01180935.yaml  demo.hybrid-01060140.yaml  (+15 more)
(+41 files in other folders)
